[gd_scene load_steps=32 format=3 uid="uid://k7hh8asqtpmd"]

[ext_resource type="Script" uid="uid://cydaxgiijv43o" path="res://scripts/gdscript/ui/hud/hud.gd" id="1_2o185"]
[ext_resource type="Shader" uid="uid://cij1eus0quiqq" path="res://scripts/shader/hud_bg_panel.gdshader" id="4_44x3s"]
[ext_resource type="Script" uid="uid://gy8fxnutovxa" path="res://scripts/gdscript/ui/hud/hub_btn.gd" id="4_khysn"]
[ext_resource type="Texture2D" uid="uid://c8mktkkqmid5k" path="res://assets/textures/hud/bg_face_2.png" id="5_khysn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_khysn"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.3882353, 0.24313726, 0.24313726, 0.9607843)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.0
shader_parameter/fade_curve = 0.69100002956262

[sub_resource type="Gradient" id="Gradient_2o185"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mm56v"]
gradient = SubResource("Gradient_2o185")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44x3s"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.3882353, 0.24313726, 0.24313726, 0.9607843)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.0
shader_parameter/fade_curve = 0.69100002956262

[sub_resource type="Gradient" id="Gradient_khysn"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2o185"]
gradient = SubResource("Gradient_khysn")

[sub_resource type="LabelSettings" id="LabelSettings_pm7eh"]
font_size = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pm7eh"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.654902, 0.60784316, 0, 0.5882353)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.050000002375
shader_parameter/fade_curve = 0.69100002956262

[sub_resource type="Gradient" id="Gradient_44x3s"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_khysn"]
gradient = SubResource("Gradient_44x3s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vikn5"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.49019608, 0.45882353, 0, 0.5882353)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.050000002375
shader_parameter/fade_curve = 1.00000004424012

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3f8dp"]
gradient = SubResource("Gradient_44x3s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mm56v"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.49019608, 0.45882353, 0, 0.5882353)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.050000002375
shader_parameter/fade_curve = 0.10000000149012

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rkolg"]
gradient = SubResource("Gradient_44x3s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2o185"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.49, 0.4573334, 0, 0.5882353)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.1
shader_parameter/fade_curve = 0.10000000149012

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vikn5"]
gradient = SubResource("Gradient_44x3s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rkolg"]
shader = ExtResource("4_44x3s")
shader_parameter/fade_start = 0.0
shader_parameter/fade_end = 1.0
shader_parameter/base_color = Color(0.49, 0.4573334, 0, 0.5882353)
shader_parameter/fade_direction = 0
shader_parameter/corner_radius = 0.1
shader_parameter/fade_curve = 1.00000004424012

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qyys1"]
gradient = SubResource("Gradient_44x3s")

[sub_resource type="Animation" id="Animation_2o185"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn_status/bg_btn_status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btn_inventory/bg_btn_inventory:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("btn_crafting/bg_btn_crafting:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("btn_status/bg_btn_status:material:shader_parameter/fade_curve")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.00000004424012]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("btn_inventory/bg_btn_inventory:material:shader_parameter/fade_curve")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.10000000149012]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("btn_crafting/bg_btn_crafting:material:shader_parameter/fade_curve")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.10000000149012]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("btn_map/bg_btn_map:material:shader_parameter/fade_curve")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.00000004424012]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("btn_map/bg_btn_map:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vikn5"]
resource_name = "btn_crafting_activated"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn_status/bg_btn_status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btn_inventory/bg_btn_inventory:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("btn_crafting/bg_btn_crafting:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("btn_crafting/bg_btn_crafting:material:shader_parameter/fade_curve")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.10000000149012, 1.00000004424012]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("btn_map/bg_btn_map:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mm56v"]
resource_name = "btn_invetory_activated"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn_status/bg_btn_status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btn_crafting/bg_btn_crafting:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("btn_inventory/bg_btn_inventory:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("btn_inventory/bg_btn_inventory:material:shader_parameter/fade_curve")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.10000000149012, 1.00000004424012]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("btn_map/bg_btn_map:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sd6i4"]
resource_name = "btn_map_activated"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn_map/bg_btn_map:material:shader_parameter/fade_curve")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.10000000149012, 1.00000004424012]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btn_map/bg_btn_map:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("btn_crafting/bg_btn_crafting:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("btn_inventory/bg_btn_inventory:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("btn_status/bg_btn_status:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_khysn"]
resource_name = "btn_status_activated"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("btn_status/bg_btn_status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("btn_inventory/bg_btn_inventory:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("btn_crafting/bg_btn_crafting:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("btn_status/bg_btn_status:material:shader_parameter/fade_curve")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.10000000149012, 1.00000004424012]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("btn_map/bg_btn_map:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mm56v"]
_data = {
&"RESET": SubResource("Animation_2o185"),
&"btn_crafting_activated": SubResource("Animation_vikn5"),
&"btn_invetory_activated": SubResource("Animation_mm56v"),
&"btn_map_activated": SubResource("Animation_sd6i4"),
&"btn_status_activated": SubResource("Animation_khysn")
}

[sub_resource type="Animation" id="Animation_44x3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [350]
}

[sub_resource type="Animation" id="Animation_pm7eh"]
resource_name = "anima_rotate_btn"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [650, 600, 550, 500, 450, 400, 350]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khysn"]
_data = {
&"RESET": SubResource("Animation_44x3s"),
&"anima_rotate_btn": SubResource("Animation_pm7eh")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2o185")

[node name="HUD_panel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BG_HUD_Vital_Signs" type="Control" parent="HUD_panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -38.99994
offset_right = 660.0
offset_bottom = 89.00006
grow_horizontal = 2
grow_vertical = 0
rotation = 3.1415927

[node name="bg_Vital_Sings_img" type="TextureRect" parent="HUD_panel/BG_HUD_Vital_Signs"]
material = SubResource("ShaderMaterial_khysn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_mm56v")

[node name="BG_Combat" type="Control" parent="HUD_panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -166.99994
offset_right = 660.0
offset_bottom = -38.99994
grow_horizontal = 2
grow_vertical = 0

[node name="bg_Weapon_Slot_img" type="TextureRect" parent="HUD_panel/BG_Combat"]
material = SubResource("ShaderMaterial_44x3s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_2o185")

[node name="STATUS_BTN" type="Control" parent="HUD_panel"]
anchors_preset = 0
offset_left = -90.0
offset_top = -110.0
offset_right = -50.0
offset_bottom = -10.0

[node name="btn_status" type="Button" parent="HUD_panel/STATUS_BTN"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "S"

[node name="Face_player" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -180.0
offset_right = 75.000244
offset_bottom = -29.99939
grow_horizontal = 2
grow_vertical = 0

[node name="bg_face" type="TextureRect" parent="Face_player"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_khysn")

[node name="TABS_INTERFACE" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -910.0
offset_top = -480.0
offset_right = 910.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_return" type="Button" parent="TABS_INTERFACE"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -25.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
text = "return"

[node name="lbl_current_tabs" type="Label" parent="TABS_INTERFACE"]
layout_mode = 1
offset_left = 100.0
offset_right = 418.0
offset_bottom = 51.0
text = "CURRENT TAB"
label_settings = SubResource("LabelSettings_pm7eh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg_label" type="TextureRect" parent="TABS_INTERFACE/lbl_current_tabs"]
material = SubResource("ShaderMaterial_pm7eh")
layout_mode = 0
offset_left = 362.0
offset_top = -20.0
offset_right = 512.0
offset_bottom = 380.0
rotation = 1.5707964
texture = SubResource("GradientTexture2D_khysn")

[node name="BoxBtnsConfigurate" type="HBoxContainer" parent="TABS_INTERFACE"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="btn_status" type="Button" parent="TABS_INTERFACE/BoxBtnsConfigurate"]
layout_mode = 2
focus_mode = 0
text = "STATUS"

[node name="bg_btn_status" type="TextureRect" parent="TABS_INTERFACE/BoxBtnsConfigurate/btn_status"]
z_index = -5
material = SubResource("ShaderMaterial_vikn5")
layout_mode = 0
offset_left = 70.100525
offset_top = -11.0
offset_right = 170.10052
offset_bottom = 68.100525
rotation = 1.5707964
texture = SubResource("GradientTexture2D_3f8dp")

[node name="btn_inventory" type="Button" parent="TABS_INTERFACE/BoxBtnsConfigurate"]
layout_mode = 2
focus_mode = 0
text = "INVENTORY"

[node name="bg_btn_inventory" type="TextureRect" parent="TABS_INTERFACE/BoxBtnsConfigurate/btn_inventory"]
modulate = Color(1, 1, 1, 0)
z_index = -5
material = SubResource("ShaderMaterial_mm56v")
layout_mode = 1
offset_left = 102.28949
offset_top = -10.999999
offset_right = 202.28949
offset_bottom = 100.28949
rotation = 1.5707964
texture = SubResource("GradientTexture2D_rkolg")

[node name="btn_crafting" type="Button" parent="TABS_INTERFACE/BoxBtnsConfigurate"]
layout_mode = 2
focus_mode = 0
text = "CRAFTING"

[node name="bg_btn_crafting" type="TextureRect" parent="TABS_INTERFACE/BoxBtnsConfigurate/btn_crafting"]
modulate = Color(1, 1, 1, 0)
z_index = -5
material = SubResource("ShaderMaterial_2o185")
layout_mode = 0
offset_left = 91.0
offset_top = -11.0
offset_right = 191.0
offset_bottom = 89.0
rotation = 1.5707964
texture = SubResource("GradientTexture2D_vikn5")

[node name="btn_map" type="Button" parent="TABS_INTERFACE/BoxBtnsConfigurate"]
layout_mode = 2
focus_mode = 0
text = " MAP "

[node name="bg_btn_map" type="TextureRect" parent="TABS_INTERFACE/BoxBtnsConfigurate/btn_map"]
modulate = Color(1, 1, 1, 0)
z_index = -5
material = SubResource("ShaderMaterial_rkolg")
layout_mode = 0
offset_left = 55.0
offset_top = -11.000002
offset_right = 155.0
offset_bottom = 53.0
rotation = 1.5707964
texture = SubResource("GradientTexture2D_qyys1")

[node name="anima_btn_highlighting" type="AnimationPlayer" parent="TABS_INTERFACE/BoxBtnsConfigurate"]
libraries = {
&"": SubResource("AnimationLibrary_mm56v")
}

[node name="HBoxContainer2" type="HBoxContainer" parent="TABS_INTERFACE"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 350
alignment = 1

[node name="btn_rotate_left" type="Button" parent="TABS_INTERFACE/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "<<"

[node name="btn_rotate_right" type="Button" parent="TABS_INTERFACE/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = ">>
"

[node name="anima_rotate_btn" type="AnimationPlayer" parent="TABS_INTERFACE/HBoxContainer2"]
libraries = {
&"": SubResource("AnimationLibrary_khysn")
}

[node name="HUB_Btn" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 260.0
offset_right = 40.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_khysn")
