extends CanvasLayer

# === ĞšĞĞĞŸĞšĞ˜ ===
@export var btn_hud: Button
@export var btn_return: Button
@export var btn_status: Button
@export var btn_inventory: Button
@export var btn_crafting: Button
@export var btn_map: Button

@export var btn_rotate_left: Button
@export var btn_rotate_right: Button

# === UI Ğ­Ğ›Ğ•ĞœĞ•ĞĞ¢Ğ« ===
@onready var face_player = $Face_player
@onready var tabs_interface = $TABS_INTERFACE
@onready var current_tabs = $TABS_INTERFACE/lbl_current_tabs

# === Ğ¡Ğ¡Ğ«Ğ›ĞšĞ˜ ===
@export var input_manager: NodePath
@export var camera: NodePath
var input_manager_node: Node
var camera_node: Camera3D

# === Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ« ===
signal status_camera_toggled(status_is_active: bool)
signal inventory_camera_toggled(inventory_is_active: bool)
signal crafting_camera_toggled(crafting_is_active: bool)
signal map_camera_toggled(map_is_active: bool)

# === Ğ¡ĞĞ¡Ğ¢ĞĞ¯ĞĞ˜Ğ¯ ===
enum UIState { GAME, STATUS, INVENTORY, CRAFTING, MAP }
var current_state: UIState = UIState.GAME
var menu_pause_active: bool = false

func _ready() -> void:
	tabs_interface.visible = false
	
	# Ğ˜Ğ½Ğ¸Ñ†Ğ¸Ğ°Ğ»Ğ¸Ğ·Ğ¸Ñ€ÑƒĞµĞ¼ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ rotate ĞºĞ°Ğº ÑĞºÑ€Ñ‹Ñ‚Ñ‹Ğµ
	btn_rotate_left.visible = false
	btn_rotate_right.visible = false
	
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸
	btn_hud.pressed.connect(_on_hud_pressed)
	btn_return.pressed.connect(_on_return_pressed)
	btn_status.pressed.connect(_on_status_pressed)
	btn_inventory.pressed.connect(_on_inventory_pressed)
	btn_crafting.pressed.connect(_on_crafting_pressed)
	btn_map.pressed.connect(_on_map_pressed)
	
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ¾Ñ€Ğ±Ğ¸Ñ‚Ğ°Ğ»ÑŒĞ½Ğ¾Ğ³Ğ¾ Ğ²Ñ€Ğ°Ñ‰ĞµĞ½Ğ¸Ñ
	btn_rotate_left.button_down.connect(_on_rotate_left_pressed)
	btn_rotate_left.button_up.connect(_on_rotate_stopped)
	btn_rotate_right.button_down.connect(_on_rotate_right_pressed)
	btn_rotate_right.button_up.connect(_on_rotate_stopped)
	
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ÑÑ Ğº InputManager
	if input_manager:
		input_manager_node = get_node(input_manager)
		if input_manager_node:
			input_manager_node.status_camera_toggled.connect(_on_input_manager_status_toggled)
			input_manager_node.menu_pause_toggled.connect(_on_menu_pause_toggled)
			input_manager_node.inventory_toggled.connect(_on_input_manager_inventory_toggled)
			input_manager_node.crafting_toggled.connect(_on_input_manager_crafting_toggled)
			input_manager_node.map_toggled.connect(_on_input_manager_map_toggled)
			print("âœ… HUD: ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½ Ğº InputManager (STATUS, INVENTORY, CRAFTING)")
		else:
			push_error("âŒ InputManager node not found!")
	
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ÑÑ Ğº ĞºĞ°Ğ¼ĞµÑ€Ğµ
	if camera:
		camera_node = get_node(camera)
		if camera_node:
			print("âœ… HUD: ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡ĞµĞ½ Ğº Camera")
		else:
			push_error("âŒ Camera node not found!")
	
	_update_ui()

# ============================================
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ ĞœĞ•ĞĞ® ĞŸĞĞ£Ğ—Ğ« (ĞŸĞ Ğ˜ĞĞ Ğ˜Ğ¢Ğ•Ğ¢)
# ============================================
func _on_menu_pause_toggled(active: bool) -> void:
	menu_pause_active = active
	
	if active:
		print("ğŸ® HUD: Menu Pause Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚Ğ° - ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ TABS")
		if tabs_interface.visible:
			_animate_hide(tabs_interface)
		current_tabs.text = ""
	else:
		print("ğŸ® HUD: Menu Pause Ğ·Ğ°ĞºÑ€Ñ‹Ñ‚Ğ° - Ğ²Ğ¾ÑÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ TABS ĞµÑĞ»Ğ¸ Ğ½ÑƒĞ¶Ğ½Ğ¾")
		if current_state != UIState.GAME:
			_animate_show(tabs_interface)
	
	_update_ui()

# ============================================
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ ĞšĞĞĞŸĞĞš
# ============================================
func _on_hud_pressed():
	if menu_pause_active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ STATUS - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if current_state == UIState.GAME:
		_switch_to_state(UIState.STATUS)

func _on_return_pressed():
	if current_state != UIState.GAME:
		_switch_to_state(UIState.GAME)

func _on_status_pressed():
	if menu_pause_active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¿ĞµÑ€ĞµĞºĞ»ÑÑ‡Ğ¸Ñ‚ÑŒÑÑ Ğ½Ğ° STATUS - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if current_state != UIState.STATUS:
		_switch_to_state(UIState.STATUS)

func _on_inventory_pressed():
	if menu_pause_active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ Inventory - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if current_state != UIState.INVENTORY:
		_switch_to_state(UIState.INVENTORY)

func _on_crafting_pressed():
	if menu_pause_active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ Crafting - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if current_state != UIState.CRAFTING:
		_switch_to_state(UIState.CRAFTING)
		
func _on_map_pressed():
	if menu_pause_active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ MAP - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if current_state != UIState.MAP:
		_switch_to_state(UIState.MAP)

# ============================================
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ Ğ¡Ğ˜Ğ“ĞĞĞ›ĞĞ’ ĞĞ¢ INPUTMANAGER (Ğ¥ĞĞ¢ĞšĞ•Ğ˜)
# ============================================
func _on_input_manager_status_toggled(active: bool) -> void:
	if menu_pause_active and active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ STATUS Ñ‡ĞµÑ€ĞµĞ· Ñ…Ğ¾Ñ‚ĞºĞµĞ¹ - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if active:
		_switch_to_state(UIState.STATUS)
	else:
		_switch_to_state(UIState.GAME)

func _on_input_manager_inventory_toggled(active: bool) -> void:
	if menu_pause_active and active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ INVENTORY Ñ‡ĞµÑ€ĞµĞ· Ñ…Ğ¾Ñ‚ĞºĞµĞ¹ - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if active:
		_switch_to_state(UIState.INVENTORY)
	else:
		_switch_to_state(UIState.GAME)

func _on_input_manager_crafting_toggled(active: bool) -> void:
	if menu_pause_active and active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ CRAFTING Ñ‡ĞµÑ€ĞµĞ· Ñ…Ğ¾Ñ‚ĞºĞµĞ¹ - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if active:
		_switch_to_state(UIState.CRAFTING)
	else:
		_switch_to_state(UIState.GAME)
		
func _on_input_manager_map_toggled(active: bool) -> void:
	if menu_pause_active and active:
		print("âš ï¸ ĞĞµĞ»ÑŒĞ·Ñ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚ÑŒ MAP Ñ‡ĞµÑ€ĞµĞ· Ñ…Ğ¾Ñ‚ĞºĞµĞ¹ - Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause")
		return
	
	if active:
		_switch_to_state(UIState.MAP)
	else:
		_switch_to_state(UIState.GAME)

# ============================================
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ ĞĞ Ğ‘Ğ˜Ğ¢ĞĞ›Ğ¬ĞĞĞ“Ğ Ğ’Ğ ĞĞ©Ğ•ĞĞ˜Ğ¯
# ============================================
func _on_rotate_left_pressed():
	if not camera_node:
		return
	if camera_node.has_method("start_status_orbit_left"):
		camera_node.start_status_orbit_left()

func _on_rotate_right_pressed():
	if not camera_node:
		return
	if camera_node.has_method("start_status_orbit_right"):
		camera_node.start_status_orbit_right()

func _on_rotate_stopped():
	if not camera_node:
		return
	if camera_node.has_method("stop_status_orbit"):
		camera_node.stop_status_orbit()

# ============================================
# Ğ¡Ğ˜Ğ¡Ğ¢Ğ•ĞœĞ ĞŸĞ•Ğ Ğ•ĞšĞ›Ğ®Ğ§Ğ•ĞĞ˜Ğ¯ Ğ¡ĞĞ¡Ğ¢ĞĞ¯ĞĞ˜Ğ™
# ============================================
func _switch_to_state(new_state: UIState) -> void:
	if new_state == current_state:
		return
	
	var old_state = current_state
	current_state = new_state
	
	# ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ ĞºĞ°Ğ¼ĞµÑ€Ğµ
	match new_state:
		UIState.STATUS:
			status_camera_toggled.emit(true)
		UIState.INVENTORY:
			inventory_camera_toggled.emit(true)
		UIState.CRAFTING:
			crafting_camera_toggled.emit(true)
		UIState.MAP:
			map_camera_toggled.emit(true)	
		UIState.GAME:
			# Ğ—Ğ°ĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¿Ñ€ĞµĞ´Ñ‹Ğ´ÑƒÑ‰ĞµĞµ ÑĞ¾ÑÑ‚Ğ¾ÑĞ½Ğ¸Ğµ
			match old_state:
				UIState.STATUS:
					status_camera_toggled.emit(false)
				UIState.INVENTORY:
					inventory_camera_toggled.emit(false)
				UIState.CRAFTING:
					crafting_camera_toggled.emit(false)
				UIState.MAP:
					map_camera_toggled.emit(false)
	
	_update_ui()
	
	print("ğŸ¬ HUD: %s â†’ %s" % [UIState.keys()[old_state], UIState.keys()[new_state]])

# ============================================
# ĞĞ‘ĞĞĞ’Ğ›Ğ•ĞĞ˜Ğ• UI
# ============================================
func _update_ui() -> void:
	# Ğ•ÑĞ»Ğ¸ Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ° Menu Pause - ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ²ÑÑ‘ ĞºÑ€Ğ¾Ğ¼Ğµ Ğ½ĞµÑ‘
	if menu_pause_active:
		_animate_hide(btn_hud)
		_animate_hide(face_player)
		_animate_hide(tabs_interface)
		# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ rotate ĞºĞ½Ğ¾Ğ¿ĞºĞ¸
		btn_rotate_left.visible = false
		btn_rotate_right.visible = false
		return
	
	# ĞĞ±Ñ‹Ñ‡Ğ½Ğ°Ñ Ğ»Ğ¾Ğ³Ğ¸ĞºĞ° ÑĞ¾ÑÑ‚Ğ¾ÑĞ½Ğ¸Ğ¹
	match current_state:
		UIState.GAME:
			_animate_hide(current_tabs)
			_animate_show(btn_hud)
			_animate_show(face_player)
			_animate_hide(tabs_interface)
			# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ rotate Ğ² GAME
			btn_rotate_left.visible = false
			btn_rotate_right.visible = false
			current_tabs.text = ""
		
		UIState.STATUS:
			_animate_hide(btn_hud)
			_animate_hide(face_player)
			_animate_show(tabs_interface)
			_animate_show(current_tabs)
			_update_tab_buttons_disabled(btn_status)
			$TABS_INTERFACE/BoxBtnsConfigurate/anima_btn_highlighting.play("btn_status_activated")
			# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸĞ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ rotate Ğ¢ĞĞ›Ğ¬ĞšĞ Ğ·Ğ´ĞµÑÑŒ
			$TABS_INTERFACE/HBoxContainer2/anima_rotate_btn.play("anima_rotate_btn")
			_animate_show(btn_rotate_left)
			_animate_show(btn_rotate_right)
			current_tabs.text = "STATUS"
		
		UIState.INVENTORY:
			_animate_hide(btn_hud)
			_animate_hide(face_player)
			_animate_show(tabs_interface)
			_update_tab_buttons_disabled(btn_inventory)
			$TABS_INTERFACE/BoxBtnsConfigurate/anima_btn_highlighting.play("btn_invetory_activated")
			# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ rotate
			btn_rotate_left.visible = false
			btn_rotate_right.visible = false
			current_tabs.text = "INVENTORY"
		
		UIState.CRAFTING:
			_animate_hide(btn_hud)
			_animate_hide(face_player)
			_animate_show(tabs_interface)
			_animate_show(current_tabs)
			_update_tab_buttons_disabled(btn_crafting)
			$TABS_INTERFACE/BoxBtnsConfigurate/anima_btn_highlighting.play("btn_crafting_activated")
			# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ rotate
			btn_rotate_left.visible = false
			btn_rotate_right.visible = false
			current_tabs.text = "CRAFTING"
		UIState.MAP:
			_animate_hide(btn_hud)
			_animate_hide(face_player)
			_animate_show(tabs_interface)
			_animate_show(current_tabs)
			_update_tab_buttons_disabled(btn_map)
			$TABS_INTERFACE/BoxBtnsConfigurate/anima_btn_highlighting.play("btn_map_activated")
			# ğŸ”¥ Ğ’ĞĞ–ĞĞ: ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ ÑĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ rotate
			btn_rotate_left.visible = false
			btn_rotate_right.visible = false
			current_tabs.text = "MAP"

# ğŸ”¥ ĞĞĞ’ĞĞ¯ Ğ¤Ğ£ĞĞšĞ¦Ğ˜Ğ¯: Ğ”ĞµĞ»Ğ°ĞµĞ¼ Ğ°ĞºÑ‚Ğ¸Ğ²Ğ½ÑƒÑ ĞºĞ½Ğ¾Ğ¿ĞºÑƒ disabled, Ğ¾ÑÑ‚Ğ°Ğ»ÑŒĞ½Ñ‹Ğµ enabled
func _update_tab_buttons_disabled(active_button: Button) -> void:
	var all_buttons = [btn_status, btn_inventory, btn_crafting, btn_map]
	
	for btn in all_buttons:
		btn.visible = true  # Ğ’ÑĞµ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ²Ğ¸Ğ´Ğ¸Ğ¼Ñ‹
		if btn == active_button:
			btn.disabled = true   # ĞĞºÑ‚Ğ¸Ğ²Ğ½Ğ°Ñ ĞºĞ½Ğ¾Ğ¿ĞºĞ° Ğ½ĞµĞ°ĞºÑ‚Ğ¸Ğ²Ğ½Ğ°
		else:
			btn.disabled = false  # ĞÑÑ‚Ğ°Ğ»ÑŒĞ½Ñ‹Ğµ ĞºĞ»Ğ¸ĞºĞ°Ğ±ĞµĞ»ÑŒĞ½Ñ‹

# ============================================
# ĞĞĞ˜ĞœĞĞ¦Ğ˜Ğ˜
# ============================================
func _animate_show(node: CanvasItem) -> void:
	if node.visible and node.modulate.a > 0.9:
		return
	
	node.visible = true
	node.modulate.a = 0.0
	var tw = create_tween().set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_OUT)
	tw.tween_property(node, "modulate:a", 1.0, 0.6)

func _animate_hide(node: CanvasItem) -> void:
	if not node.visible:
		return
	
	var tw = create_tween().set_trans(Tween.TRANS_SINE).set_ease(Tween.EASE_IN)
	tw.tween_property(node, "modulate:a", 0.0, 0.6)
	tw.finished.connect(func(): node.visible = false)

# ============================================
# ĞŸĞ£Ğ‘Ğ›Ğ˜Ğ§ĞĞ«Ğ• ĞœĞ•Ğ¢ĞĞ”Ğ«
# ============================================
func force_close_tabs() -> void:
	"""ĞŸÑ€Ğ¸Ğ½ÑƒĞ´Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾Ğµ Ğ·Ğ°ĞºÑ€Ñ‹Ñ‚Ğ¸Ğµ Ñ‚Ğ°Ğ±Ğ¾Ğ² (Ğ½Ğ°Ğ¿Ñ€Ğ¸Ğ¼ĞµÑ€, Ğ¿Ñ€Ğ¸ Ğ¾Ñ‚ĞºÑ€Ñ‹Ñ‚Ğ¸Ğ¸ Ğ´Ğ¸Ğ°Ğ»Ğ¾Ğ³Ğ°)"""
	if current_state != UIState.GAME:
		_switch_to_state(UIState.GAME)

func is_any_tab_open() -> bool:
	return current_state != UIState.GAME

func get_current_state() -> UIState:
	return current_state
